# ZXP-Magic

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
scripts/: rename-installer.js
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  app.manifest  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: installer.rs  lib.rs
src/components/: DropZone.tsx  ExtensionDetail.tsx  ExtensionGrid.tsx  Header.tsx  InstallToast.tsx  InstallView.tsx  LibraryView.tsx  SettingsPanel.tsx
src/lib/: appColors.ts  appColors.tsx
