[package]
name = "zxp-magic"
version = "1.0.0"
description = "ZXP Magic - Adobe Extension Installer"
authors = ["Egehan"]
license = "MIT"
repository = "https://github.com/Egehan/ZXP-Magic"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
zip = "2.2"
walkdir = "2"
quick-xml = { version = "0.36", features = ["serialize"] }

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"
